--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="keywords" content="digital industry talks">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.png?44">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9906">
-	<link rel="stylesheet" type="text/css" href="style.css?1079">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9092">
+	<link rel="stylesheet" type="text/css" href="style.css?2133">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -43,7 +43,7 @@
 								<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon " d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 							</button>
 							<div class="collapse navbar-collapse navbar-32798">
-									<ul class="site-navigation nav navbar-nav ml-auto ">
+									<ul class="site-navigation nav navbar-nav ml-auto">
 										<li class="nav-item">
 											<a href="index.html" class="nav-link">Home</a>
 										</li>
@@ -92,6 +92,9 @@
 													</li>
 													<li class="nav-item">
 														<a href="6-february-2025.html" class="nav-link">6th February 2025</a>
+													</li>
+													<li class="nav-item">
+														<a href="13-march-2025.html" class="nav-link">13th March 2025</a>
 													</li>
 												</ul>
 											</div>
@@ -149,7 +152,7 @@
 	<div class="container bloc-no-padding-lg bloc-no-padding">
 		<div class="row">
 			<div class="col text-md-left text-center bgc-7912 col-lg-12">
-				<img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019">
+				<picture><source type="image/webp" srcset="img/hh_logo_2019.webp"><img src="img/hh_logo_2019.png" class="img-fluid mx-auto d-block" alt="hh_logo_2019" width="655" height="208"></picture>
 			</div>
 		</div>
 	</div>
@@ -157,7 +160,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-2 -->
-<div class="bloc tc-7781 l-bloc" id="bloc-2">
+<div class="bloc tc-7781 l-bloc " id="bloc-2">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -166,13 +169,13 @@
 				</h1>
 				<p class="p-1-bloc-2-style mg-lg">
 					Happy Hour Digital Industry Talks are designed to offer an insight into working in the tech and digital industries.&nbsp;Talks are mostly focused on students, &nbsp;"early career" or how to get into the industry with speakers presenting their journey into the industry and professional practice.<br><br>We are running Happy Hour Talks every other week in the first two semesters starting on 30th January 2025<br><br>
-				</p><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB">
+				</p><picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HAPPY_HOUR_NOV_2022_WEB.webp"><img src="img/lazyload-ph.png" data-src="img/HAPPY_HOUR_NOV_2022_WEB.jpg" class="img-fluid mx-auto d-block lazyload" alt="HAPPY_HOUR_NOV_2022_WEB" width="1170" height="641"></picture>
 			</div>
 		</div>
 		<div class="row voffset-lg">
 			<div class="align-self-center col-lg-3 col-md-6">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/sam_dave_HH_25_cover.jpg" class="img-fluid mx-auto d-block lazyload" alt="Sam Dave datamango">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/sam_dave_HH_25_cover.webp"><img src="img/lazyload-ph.png" data-src="img/sam_dave_HH_25_cover.jpg" class="img-fluid mx-auto d-block lazyload" alt="Sam Dave datamango" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Sam Cole & Dave Westbrook - Datamango</strong><br>Internships & Working in Tech<br><strong>30/1/2025</strong>
@@ -182,7 +185,7 @@
 			</div>
 			<div class="mt-3 col-lg-3 col-md-6 mt-md-0 align-self-center">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/C_fish.jpeg" class="img-fluid mx-auto lazyload" alt="place_holder_face_2">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/C_fish.webp"><img src="img/lazyload-ph.png" data-src="img/C_fish.jpeg" class="img-fluid mx-auto lazyload" alt="Cian Fish" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-bloc-2-style">
 							<strong>Cian Fish<br></strong>Getting a Placement<br>at Cisco<br><strong>6/2/2025</strong><br>
@@ -190,19 +193,19 @@
 					</div>
 				</div>
 			</div>
-			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
+			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/adam_don_2-11-23.jpg" class="img-fluid mx-auto d-block lazyload" alt="Adam & Dom">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1517017157084.webp"><img src="img/lazyload-ph.png" data-src="img/1517017157084.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Robin Willson" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-3-style">
-							Adam Chu &&nbsp;Dominik Romanek <br>Getting your first job<br><strong>2/11/2023</strong><br>
-						</p><a href="2nd-nov-2023.html" class="btn btn-style btn-c-564 btn-block">More Details</a>
+							<strong>Robin Wilson</strong><br>Freelance Geospatial Software Engineer & Data Scientist<br><strong>13/3/2025</strong><br>
+						</p><a href="13-march-2025.html" class="btn btn-style btn-c-564 btn-block">More Details</a>
 					</div>
 				</div>
 			</div>
 			<div class="mt-3 col-lg-3 align-self-center col-md-6 mt-lg-0 object-hidden">
 				<div class="card d-block">
-					<img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luck Searle">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1686848012768.webp"><img src="img/lazyload-ph.png" data-src="img/1686848012768.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Luck Searle" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-4-style">
 							<strong>Luke Searle</strong><br>Learning Designer at University of Southampton<br><strong>16/11/2023</strong><br>
@@ -214,7 +217,7 @@
 		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="James Whale">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1540546768920.webp"><img src="img/lazyload-ph.png" data-src="img/1540546768920.jpeg" class="img-fluid mx-auto d-block lazyload" alt="James Whale" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>James Whale</strong><br>Site Reliability Engineer <br>at Cisco<br><strong>30/11/2023</strong><br>
@@ -224,7 +227,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="panel  7/12/23">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/HH_7_DEC_2023%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/HH_7_DEC_2023%20copy.jpg" class="img-fluid mx-auto d-block lazyload" alt="panel  7/12/23" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Panel Discussion</strong><br>Work Experience.&nbsp;<br>Placements & First Jobs<br><strong>7/12/2023&nbsp;</strong><br>
@@ -234,7 +237,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/ross_chapman.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Ross Chapman">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/ross_chapman.webp"><img src="img/lazyload-ph.png" data-src="img/ross_chapman.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Ross Chapman" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Ross Chapman</strong><br>Product Strategist & Consultant<br><strong>1/2/2024&nbsp;</strong><br>
@@ -244,7 +247,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/nick_h.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/nick_h.webp"><img src="img/lazyload-ph.png" data-src="img/nick_h.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Nick Thorne<br></strong>Software Engineer<br>Director at Rockstone Data&nbsp;<br><strong>15/2/2024&nbsp;</strong><br>
@@ -256,7 +259,7 @@
 		<div class="row voffset-md">
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/datamango.jpg" class="img-fluid mx-auto d-block img-data-man-style lazyload" alt="Data Mango">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/datamango.webp"><img src="img/lazyload-ph.png" data-src="img/datamango.jpg" class="img-fluid mx-auto d-block img-data-man-style lazyload" alt="Data Mango" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>DataMango</strong><br>Web & Software<br>Solutions<br><strong>29/2/2024</strong><br>
@@ -266,7 +269,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/IMG_20230216_165051.jpg" class="img-fluid mx-auto d-block lazyload" alt="Bradley&nbsp;Marshall">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/IMG_20230216_165051.webp"><img src="img/lazyload-ph.png" data-src="img/IMG_20230216_165051.jpg" class="img-fluid mx-auto d-block lazyload" alt="Bradley&nbsp;Marshall" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Bradley&nbsp;Marshall</strong><br>Control Systems Engineer <br>at Ocean Infinity<br><strong>14/3/2024</strong><br>
@@ -276,7 +279,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/1627677664087.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Andy Clayton">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1627677664087.webp"><img src="img/lazyload-ph.png" data-src="img/1627677664087.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Andy Clayton" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Andy&nbsp;Dayton</strong><br>Senior UX Designer <br>at JPMorgan Chase<br><strong>18/4/2024&nbsp;</strong><br>
@@ -286,7 +289,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center object-hidden">
 				<div class="card">
-					<img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne">
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/place_holder_face_2.webp"><img src="img/lazyload-ph.png" data-src="img/place_holder_face_2.jpg" class="img-fluid mx-auto d-block lazyload" alt="Nick Thorne" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>NAME<br></strong>Info<br>Info<br><strong>15/2/2024&nbsp;</strong><br>
@@ -351,9 +354,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3053"></script>
-<script src="./js/bootstrap.bundle.min.js?8904"></script>
-<script src="./js/blocs.min.js?9783"></script>
+<script src="./js/jquery.min.js?9208"></script>
+<script src="./js/bootstrap.bundle.min.js?4545"></script>
+<script src="./js/blocs.min.js?7139"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
