--- a/13-march-2025.html
+++ b/13-march-2025.html
@@ -8,8 +8,8 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9092">
-	<link rel="stylesheet" type="text/css" href="style.css?2133">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?4225">
+	<link rel="stylesheet" type="text/css" href="style.css?226">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>6-February-2025-1</title>
@@ -190,7 +190,7 @@
 			<div class="col text-md-left text-center">
 				<div class="card">
 					<div class="card-header">
-						<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1517017157084.webp"><img src="img/lazyload-ph.png" data-src="img/1517017157084.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Cian Fish" width="450" height="450"></picture>
+						<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1517017157084.webp"><img src="img/lazyload-ph.png" data-src="img/1517017157084.jpeg" class="img-fluid mx-auto d-block lazyload" alt="Robin Wilson" width="450" height="450"></picture>
 					</div>
 					<div class="card-body">
 						<p class="p-102-style text-left">
@@ -256,9 +256,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?9208"></script>
-<script src="./js/bootstrap.bundle.min.js?4545"></script>
-<script src="./js/blocs.min.js?7139"></script>
+<script src="./js/jquery.min.js?1030"></script>
+<script src="./js/bootstrap.bundle.min.js?8922"></script>
+<script src="./js/blocs.min.js?1346"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
