--- a/23-october-2025.html
+++ b/23-october-2025.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css?9277">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>16-October-2025-1</title>
+    <title>23-October-2025</title>
 
 
     
